:sparkles: post async with QueueObj